// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parse cobertura file with empty classes 1`] = `
{
  "basePath": "",
  "coverage": 49.83,
  "files": {},
  "timestamp": 1715832361332,
}
`;

exports[`parse cobertura file with empty lines 1`] = `
{
  "basePath": "src/main.ts",
  "coverage": 49.83,
  "files": {
    "4fab5baaca5c14d2de62d8d2fceef376ddddcc8e9509d86cfa5643f51b89ce3d": {
      "absolute": "src/main.ts",
      "coverage": 0,
      "lines": {},
      "relative": "src/main.ts",
    },
  },
  "timestamp": 1715832361332,
}
`;

exports[`parse cobertura file with empty methods 1`] = `
{
  "basePath": "src/main.ts",
  "coverage": 49.83,
  "files": {
    "4fab5baaca5c14d2de62d8d2fceef376ddddcc8e9509d86cfa5643f51b89ce3d": {
      "absolute": "src/main.ts",
      "coverage": 0,
      "lines": {},
      "relative": "src/main.ts",
    },
  },
  "timestamp": 1715832361332,
}
`;

exports[`parse cobertura file with empty packages 1`] = `
{
  "basePath": "",
  "coverage": 0,
  "files": {},
  "timestamp": 1716003335,
}
`;

exports[`parse cobertura project with single file 1`] = `
{
  "basePath": "/foo.php",
  "coverage": 2.65,
  "files": {
    "83e0f134b069618626405250ccb3fd4adcc0fdfc7714b387d4aa4f30862f75a7": {
      "absolute": "/foo.php",
      "coverage": 0,
      "lines": {},
      "relative": "/foo.php",
    },
  },
  "timestamp": 1752615692,
}
`;

exports[`parse empty cobertura file 1`] = `
{
  "basePath": "",
  "coverage": 0,
  "files": {},
  "timestamp": 1716003335,
}
`;

exports[`parse many sources cobertura file 1`] = `
{
  "basePath": "",
  "coverage": 81.41,
  "files": {
    "047ca623186112f554f1361a31af7b766b2afbd159064c004bf45123690456fb": {
      "absolute": "/dio/lib/src/progress_stream/browser_progress_stream.dart",
      "coverage": 87.5,
      "lines": {
        "11": true,
        "12": true,
        "14": true,
        "15": true,
        "16": true,
        "18": true,
        "23": true,
        "24": true,
        "25": true,
        "27": false,
        "28": true,
        "29": false,
        "32": true,
        "38": true,
        "40": true,
        "6": true,
      },
      "relative": "dio/lib/src/progress_stream/browser_progress_stream.dart",
    },
    "0c6ad18173da236b264dd249ca7086db6b1e1b4b51cdfe40077268e3407c45ca": {
      "absolute": "/dio/lib/src/dio_mixin.dart",
      "coverage": 93.81,
      "lines": {
        "100": true,
        "103": true,
        "111": true,
        "120": true,
        "123": true,
        "130": true,
        "140": true,
        "144": true,
        "151": true,
        "160": true,
        "163": true,
        "170": true,
        "178": true,
        "182": true,
        "187": true,
        "194": true,
        "197": true,
        "202": true,
        "210": true,
        "214": true,
        "219": true,
        "226": true,
        "229": true,
        "234": true,
        "244": true,
        "248": true,
        "255": true,
        "264": true,
        "267": true,
        "274": true,
        "285": true,
        "286": true,
        "297": true,
        "309": true,
        "312": true,
        "321": true,
        "322": true,
        "331": true,
        "34": true,
        "341": true,
        "342": true,
        "349": true,
        "35": true,
        "352": true,
        "353": false,
        "359": true,
        "362": true,
        "364": true,
        "365": true,
        "366": true,
        "367": true,
        "368": true,
        "370": true,
        "376": true,
        "379": true,
        "381": true,
        "382": true,
        "383": true,
        "384": true,
        "385": true,
        "386": true,
        "387": true,
        "397": true,
        "400": true,
        "402": true,
        "403": true,
        "404": true,
        "405": true,
        "406": true,
        "407": true,
        "408": true,
        "409": true,
        "419": true,
        "422": true,
        "423": true,
        "425": true,
        "426": true,
        "427": true,
        "428": true,
        "429": true,
        "434": true,
        "435": true,
        "436": true,
        "438": true,
        "439": true,
        "440": true,
        "441": true,
        "442": true,
        "451": true,
        "452": true,
        "456": true,
        "457": true,
        "458": true,
        "459": true,
        "460": true,
        "464": true,
        "465": true,
        "471": true,
        "472": true,
        "473": true,
        "474": true,
        "48": false,
        "480": true,
        "481": true,
        "482": true,
        "483": true,
        "484": true,
        "488": true,
        "489": true,
        "490": true,
        "491": true,
        "492": true,
        "497": true,
        "498": true,
        "50": false,
        "502": true,
        "504": true,
        "505": false,
        "508": true,
        "51": false,
        "512": true,
        "513": true,
        "515": true,
        "516": true,
        "519": true,
        "521": true,
        "522": true,
        "523": true,
        "526": true,
        "527": true,
        "530": true,
        "531": true,
        "532": true,
        "533": true,
        "534": true,
        "536": true,
        "537": true,
        "538": true,
        "54": true,
        "540": true,
        "545": true,
        "546": true,
        "547": true,
        "548": true,
        "549": true,
        "552": true,
        "554": true,
        "556": true,
        "560": true,
        "561": true,
        "567": true,
        "571": true,
        "572": true,
        "586": true,
        "587": true,
        "588": true,
        "595": true,
        "596": true,
        "597": true,
        "599": true,
        "604": true,
        "605": true,
        "606": false,
        "607": false,
        "613": true,
        "614": true,
        "615": true,
        "620": true,
        "621": true,
        "623": true,
        "624": true,
        "625": true,
        "626": true,
        "629": true,
        "63": true,
        "634": true,
        "635": true,
        "636": false,
        "638": false,
        "645": true,
        "650": true,
        "651": true,
        "653": true,
        "655": true,
        "656": true,
        "657": true,
        "658": true,
        "660": true,
        "662": true,
        "668": true,
        "67": true,
        "670": true,
        "676": true,
        "684": true,
        "687": true,
        "689": true,
        "690": true,
        "694": true,
        "699": true,
        "702": true,
        "708": true,
        "713": true,
        "714": false,
        "718": true,
        "719": true,
        "721": true,
        "722": true,
        "723": true,
        "724": true,
        "727": true,
        "729": true,
        "73": true,
        "732": true,
        "733": true,
        "734": true,
        "735": true,
        "736": true,
        "737": true,
        "753": true,
        "755": false,
        "762": false,
        "766": false,
        "767": false,
        "81": true,
        "84": true,
        "90": true,
      },
      "relative": "dio/lib/src/dio_mixin.dart",
    },
    "14883a7ae9f5f2a78e7aa04f885b9071efaa546cd0274aa39808a3bcf5be0eb2": {
      "absolute": "/plugins/http2_adapter/lib/src/connection_manager_imp.dart",
      "coverage": 79.84,
      "lines": {
        "101": true,
        "103": true,
        "104": true,
        "106": true,
        "107": true,
        "111": false,
        "121": true,
        "122": true,
        "123": true,
        "124": true,
        "126": true,
        "130": true,
        "131": true,
        "132": true,
        "133": true,
        "134": true,
        "140": true,
        "145": true,
        "146": true,
        "148": true,
        "151": true,
        "152": true,
        "153": true,
        "154": true,
        "158": true,
        "159": true,
        "160": true,
        "162": true,
        "163": true,
        "164": true,
        "166": true,
        "170": true,
        "171": true,
        "172": true,
        "176": true,
        "185": true,
        "186": true,
        "187": true,
        "189": true,
        "190": false,
        "191": false,
        "194": true,
        "195": true,
        "197": true,
        "199": false,
        "200": false,
        "208": true,
        "210": true,
        "211": true,
        "212": true,
        "213": true,
        "214": true,
        "215": true,
        "216": true,
        "217": true,
        "219": false,
        "220": false,
        "222": false,
        "228": false,
        "229": false,
        "230": false,
        "234": true,
        "236": true,
        "238": true,
        "239": true,
        "240": true,
        "241": true,
        "243": true,
        "245": true,
        "250": false,
        "253": false,
        "254": false,
        "260": false,
        "263": false,
        "265": false,
        "266": false,
        "268": false,
        "272": true,
        "273": true,
        "274": true,
        "280": true,
        "284": true,
        "285": true,
        "286": true,
        "287": true,
        "294": true,
        "296": true,
        "297": true,
        "300": false,
        "301": false,
        "302": false,
        "305": true,
        "310": true,
        "311": true,
        "312": true,
        "313": true,
        "314": true,
        "316": true,
        "319": true,
        "34": true,
        "38": true,
        "39": false,
        "43": true,
        "44": true,
        "45": true,
        "48": true,
        "5": true,
        "50": true,
        "55": true,
        "58": true,
        "59": false,
        "61": true,
        "62": true,
        "66": true,
        "67": false,
        "68": false,
        "71": true,
        "74": true,
        "77": true,
        "78": true,
        "79": true,
        "80": true,
        "81": true,
        "88": true,
        "89": true,
        "90": true,
        "91": true,
        "92": true,
        "93": true,
      },
      "relative": "plugins/http2_adapter/lib/src/connection_manager_imp.dart",
    },
    "19ed92a501e076e02b58f8470e2ec802b079d63e69ecc1c6549809033fa93915": {
      "absolute": "/dio/lib/src/interceptors/imply_content_type.dart",
      "coverage": 100,
      "lines": {
        "14": true,
        "16": true,
        "21": true,
        "22": true,
        "24": true,
        "26": true,
        "29": true,
        "30": true,
        "33": true,
        "37": true,
        "39": true,
      },
      "relative": "dio/lib/src/interceptors/imply_content_type.dart",
    },
    "1bc936903366c430e1c09b039066a0a2cc61123216fa6525316bdaeb1ebfb470": {
      "absolute": "/dio/lib/src/transformer.dart",
      "coverage": 100,
      "lines": {
        "32": true,
        "36": true,
        "38": true,
        "42": true,
        "49": true,
        "53": true,
        "55": true,
        "59": true,
        "67": true,
        "71": true,
        "72": true,
        "73": true,
        "74": true,
      },
      "relative": "dio/lib/src/transformer.dart",
    },
    "23beed8928f09196a04e4a994b43025e1dd4d4626743062507a0cc7af2f30050": {
      "absolute": "/dio/lib/src/utils.dart",
      "coverage": 98.28,
      "lines": {
        "100": true,
        "102": true,
        "103": true,
        "104": true,
        "105": true,
        "107": true,
        "108": true,
        "109": true,
        "114": true,
        "115": true,
        "117": true,
        "121": true,
        "126": true,
        "127": true,
        "130": true,
        "132": true,
        "134": true,
        "136": true,
        "138": true,
        "145": true,
        "146": true,
        "147": true,
        "148": true,
        "150": true,
        "151": true,
        "157": true,
        "159": true,
        "24": true,
        "25": true,
        "26": true,
        "27": true,
        "28": true,
        "29": true,
        "31": true,
        "37": true,
        "41": false,
        "47": true,
        "54": true,
        "63": true,
        "64": true,
        "65": true,
        "68": true,
        "71": true,
        "73": true,
        "74": true,
        "76": true,
        "78": true,
        "81": true,
        "82": true,
        "83": true,
        "85": true,
        "86": true,
        "87": true,
        "88": true,
        "89": true,
        "93": true,
        "94": true,
        "95": true,
      },
      "relative": "dio/lib/src/utils.dart",
    },
    "36e5849f5b7b10173ab2520c83ba8553e1ab380fe7d50d42ddb454766f0b2372": {
      "absolute": "/dio/lib/src/adapter.dart",
      "coverage": 92.86,
      "lines": {
        "103": true,
        "104": true,
        "123": true,
        "124": true,
        "28": false,
        "58": true,
        "66": true,
        "69": true,
        "76": true,
        "77": true,
        "80": true,
        "87": true,
        "88": true,
        "90": true,
      },
      "relative": "dio/lib/src/adapter.dart",
    },
    "38ef083699810a7e351573e0004d595497f4ad4e8dbe150fb56713caa1c87859": {
      "absolute": "/dio/lib/src/multipart_file/io_multipart_file.dart",
      "coverage": 85.71,
      "lines": {
        "15": false,
        "16": true,
        "17": true,
        "18": true,
        "19": true,
        "27": true,
        "33": false,
        "34": true,
        "35": true,
        "36": true,
        "37": true,
        "45": true,
        "46": true,
        "9": true,
      },
      "relative": "dio/lib/src/multipart_file/io_multipart_file.dart",
    },
    "3d72fdcc8fdb85f7e75f82acdcbf3cbadce77a6e353446ccd7c2b7799508f3f0": {
      "absolute": "/dio/lib/src/dio/dio_for_native.dart",
      "coverage": 91.3,
      "lines": {
        "101": true,
        "105": true,
        "108": true,
        "112": false,
        "114": true,
        "115": false,
        "117": true,
        "122": true,
        "126": true,
        "127": true,
        "128": true,
        "134": true,
        "135": true,
        "136": true,
        "138": true,
        "140": true,
        "141": true,
        "143": true,
        "144": true,
        "146": true,
        "148": true,
        "15": true,
        "150": true,
        "151": true,
        "152": true,
        "155": true,
        "156": true,
        "161": true,
        "165": true,
        "166": true,
        "168": false,
        "169": false,
        "173": true,
        "175": true,
        "177": true,
        "178": true,
        "184": true,
        "185": true,
        "186": true,
        "188": true,
        "21": true,
        "22": true,
        "23": true,
        "27": true,
        "39": true,
        "43": true,
        "46": true,
        "53": true,
        "54": true,
        "55": true,
        "56": true,
        "58": true,
        "59": true,
        "64": true,
        "65": true,
        "66": true,
        "68": true,
        "70": true,
        "76": true,
        "78": true,
        "79": true,
        "80": true,
        "81": true,
        "82": true,
        "83": true,
        "85": false,
        "86": false,
        "93": true,
        "98": true,
      },
      "relative": "dio/lib/src/dio/dio_for_native.dart",
    },
    "42f1191f14a8444ed7b9466fd24d9a42c4222d1cc628b6dfa48db33f931a2a40": {
      "absolute": "/dio/lib/src/dio_exception.dart",
      "coverage": 71.93,
      "lines": {
        "100": true,
        "105": true,
        "112": true,
        "116": true,
        "121": true,
        "128": true,
        "133": true,
        "138": true,
        "145": true,
        "149": true,
        "157": true,
        "162": true,
        "171": true,
        "176": true,
        "178": true,
        "209": true,
        "217": true,
        "218": true,
        "219": true,
        "220": true,
        "221": false,
        "222": true,
        "223": true,
        "227": false,
        "229": false,
        "230": false,
        "231": false,
        "238": true,
        "240": true,
        "243": true,
        "246": true,
        "249": true,
        "252": true,
        "261": true,
        "263": true,
        "267": true,
        "268": true,
        "270": true,
        "273": true,
        "278": true,
        "43": false,
        "45": false,
        "47": false,
        "49": false,
        "51": false,
        "53": false,
        "55": false,
        "57": false,
        "59": false,
        "69": true,
        "77": false,
        "79": true,
        "80": false,
        "82": true,
        "87": true,
        "92": true,
        "95": true,
      },
      "relative": "dio/lib/src/dio_exception.dart",
    },
    "481f5993a7795ed1ee31f808d11a579a48fd60d698e8ca13f85dcb3acff5d421": {
      "absolute": "/dio/lib/src/dio.dart",
      "coverage": 25,
      "lines": {
        "250": false,
        "260": false,
        "261": false,
        "39": true,
      },
      "relative": "dio/lib/src/dio.dart",
    },
    "541cdb8fb7046c948680968839906d9a3cc42dc00295af96ac22b8ce208a3364": {
      "absolute": "/dio/lib/src/multipart_file/browser_multipart_file.dart",
      "coverage": 20,
      "lines": {
        "13": false,
        "15": false,
        "21": false,
        "3": true,
        "7": false,
      },
      "relative": "dio/lib/src/multipart_file/browser_multipart_file.dart",
    },
    "564bd06f55902376a964cb9b191fff482b158dc781fd9973cc6c9f1e7dfa234c": {
      "absolute": "/dio/lib/src/transformers/sync_transformer.dart",
      "coverage": 86.67,
      "lines": {
        "24": true,
        "32": true,
        "34": true,
        "35": true,
        "36": true,
        "37": true,
        "38": true,
        "39": true,
        "41": false,
        "42": false,
        "46": false,
        "48": false,
        "50": true,
        "54": true,
        "59": true,
        "61": true,
        "65": true,
        "66": true,
        "69": true,
        "73": true,
        "74": true,
        "77": true,
        "78": true,
        "81": true,
        "84": true,
        "89": true,
        "90": true,
        "96": true,
        "97": true,
        "99": true,
      },
      "relative": "dio/lib/src/transformers/sync_transformer.dart",
    },
    "5a9acdf2bac512a4da993283844d0f209fea62af98db725927357f609cf379e5": {
      "absolute": "/dio/lib/src/adapters/browser_adapter.dart",
      "coverage": 75,
      "lines": {
        "100": true,
        "102": true,
        "114": false,
        "115": false,
        "116": false,
        "117": false,
        "122": true,
        "123": false,
        "124": false,
        "127": false,
        "129": false,
        "130": false,
        "132": false,
        "134": false,
        "136": false,
        "138": false,
        "141": true,
        "143": true,
        "144": true,
        "145": true,
        "147": true,
        "153": false,
        "156": true,
        "159": false,
        "167": true,
        "168": true,
        "169": true,
        "170": true,
        "171": true,
        "173": true,
        "174": true,
        "175": true,
        "177": true,
        "179": true,
        "18": true,
        "181": true,
        "182": true,
        "183": true,
        "184": false,
        "185": false,
        "186": false,
        "187": false,
        "188": false,
        "190": false,
        "193": true,
        "194": true,
        "195": true,
        "198": true,
        "199": true,
        "200": false,
        "201": false,
        "203": true,
        "204": true,
        "205": true,
        "206": true,
        "207": true,
        "209": true,
        "210": true,
        "213": true,
        "214": true,
        "218": true,
        "219": true,
        "22": true,
        "220": true,
        "224": true,
        "226": true,
        "228": true,
        "229": true,
        "230": true,
        "231": false,
        "233": true,
        "234": true,
        "235": false,
        "236": false,
        "237": false,
        "238": true,
        "242": true,
        "243": true,
        "244": true,
        "247": true,
        "251": true,
        "253": true,
        "254": true,
        "256": true,
        "258": true,
        "260": true,
        "261": true,
        "263": true,
        "269": true,
        "271": true,
        "276": true,
        "281": true,
        "282": true,
        "283": true,
        "285": true,
        "286": true,
        "287": true,
        "288": true,
        "291": true,
        "292": true,
        "294": true,
        "296": true,
        "297": true,
        "298": true,
        "299": true,
        "305": false,
        "306": false,
        "307": false,
        "308": false,
        "311": false,
        "312": false,
        "34": true,
        "39": true,
        "40": true,
        "41": true,
        "42": true,
        "45": true,
        "47": false,
        "49": true,
        "52": true,
        "53": true,
        "54": true,
        "55": true,
        "57": true,
        "59": true,
        "61": true,
        "65": true,
        "69": true,
        "70": true,
        "71": true,
        "72": false,
        "74": true,
        "75": true,
        "76": true,
        "77": true,
        "78": false,
        "79": true,
        "82": true,
        "86": true,
        "88": true,
        "89": true,
        "90": true,
        "92": false,
        "94": true,
        "95": true,
        "96": true,
        "97": true,
        "98": true,
      },
      "relative": "dio/lib/src/adapters/browser_adapter.dart",
    },
    "5c02d69a080def64961e419dc56085a6c0c37a20f4920c3df03825568638348f": {
      "absolute": "/dio/lib/src/cancel_token.dart",
      "coverage": 83.33,
      "lines": {
        "13": true,
        "18": false,
        "19": false,
        "22": true,
        "31": true,
        "34": true,
        "37": true,
        "38": true,
        "39": true,
        "41": true,
        "43": true,
        "44": true,
      },
      "relative": "dio/lib/src/cancel_token.dart",
    },
    "600ff1af86377733993e06911053a318543338f01071f6521084d6aee67bfc8e": {
      "absolute": "/dio/lib/src/compute/compute_web.dart",
      "coverage": 0,
      "lines": {
        "24": false,
        "32": false,
        "33": false,
        "34": false,
      },
      "relative": "dio/lib/src/compute/compute_web.dart",
    },
    "6a51f36d7f3103636a7a55e31fe9bd5deba595d8d220ef55d229c84a2fdf8daa": {
      "absolute": "/dio/lib/src/dio/dio_for_browser.dart",
      "coverage": 57.14,
      "lines": {
        "10": true,
        "16": true,
        "17": true,
        "19": true,
        "22": false,
        "33": false,
        "36": false,
      },
      "relative": "dio/lib/src/dio/dio_for_browser.dart",
    },
    "6b4fbab3f519f98ba0e68fb1039f0069ba2f0fa144c8262ab369e8caf6618956": {
      "absolute": "/dio/lib/src/adapters/io_adapter.dart",
      "coverage": 88.89,
      "lines": {
        "109": true,
        "112": true,
        "114": true,
        "117": true,
        "121": true,
        "122": true,
        "124": false,
        "125": false,
        "126": false,
        "127": false,
        "128": false,
        "129": false,
        "133": false,
        "139": true,
        "141": true,
        "146": true,
        "147": true,
        "148": true,
        "152": true,
        "153": true,
        "154": true,
        "155": true,
        "157": true,
        "158": true,
        "159": true,
        "169": true,
        "170": true,
        "171": true,
        "172": true,
        "174": true,
        "175": true,
        "176": true,
        "185": true,
        "186": true,
        "187": true,
        "188": true,
        "189": true,
        "194": true,
        "196": true,
        "201": true,
        "202": true,
        "203": true,
        "205": true,
        "206": true,
        "207": true,
        "210": true,
        "211": true,
        "212": true,
        "213": true,
        "214": true,
        "218": true,
        "219": true,
        "221": true,
        "222": true,
        "224": true,
        "226": true,
        "229": true,
        "231": true,
        "232": true,
        "235": true,
        "236": true,
        "237": true,
        "239": true,
        "241": true,
        "31": false,
        "35": true,
        "62": true,
        "68": true,
        "69": false,
        "73": true,
        "74": true,
        "80": true,
        "81": true,
        "84": true,
        "89": true,
        "90": true,
        "94": true,
        "95": true,
        "96": true,
        "98": true,
        "99": true,
      },
      "relative": "dio/lib/src/adapters/io_adapter.dart",
    },
    "6d76f2b15fffdcddc665cd44c6ce46c1b5ec262589db204491c08900c6f65d74": {
      "absolute": "/dio/lib/src/parameter.dart",
      "coverage": 8.33,
      "lines": {
        "15": false,
        "16": false,
        "19": false,
        "21": false,
        "24": false,
        "27": false,
        "28": false,
        "29": false,
        "30": false,
        "32": false,
        "33": false,
        "6": true,
      },
      "relative": "dio/lib/src/parameter.dart",
    },
    "72ad978e4435692d5fa9db4ca4ba22f30bbd21e84a0cb5871364b2cd1d83c444": {
      "absolute": "/plugins/http2_adapter/lib/src/connection_manager.dart",
      "coverage": 100,
      "lines": {
        "14": true,
        "34": true,
        "35": true,
        "8": true,
      },
      "relative": "plugins/http2_adapter/lib/src/connection_manager.dart",
    },
    "75721fcf29fb9a5e9ed2c1c29d142fbc6ae140442a972e3ca004701fc42f6f55": {
      "absolute": "/dio/lib/src/response/response_stream_handler.dart",
      "coverage": 100,
      "lines": {
        "102": true,
        "103": true,
        "104": true,
        "105": true,
        "15": true,
        "20": true,
        "21": true,
        "26": true,
        "27": true,
        "30": true,
        "31": true,
        "34": true,
        "35": true,
        "36": true,
        "39": true,
        "40": true,
        "43": true,
        "44": true,
        "50": true,
        "52": true,
        "53": true,
        "54": true,
        "55": true,
        "56": true,
        "57": true,
        "58": true,
        "59": true,
        "67": true,
        "68": true,
        "69": true,
        "71": true,
        "72": true,
        "73": true,
        "74": true,
        "79": true,
        "80": true,
        "81": true,
        "83": true,
        "84": true,
        "85": true,
        "86": true,
        "91": true,
        "92": true,
        "94": true,
        "95": true,
        "96": true,
        "98": true,
      },
      "relative": "dio/lib/src/response/response_stream_handler.dart",
    },
    "77cfbfe91383ace40cba72c4f98274c52526e91278bfbbe6b558db359fd2a917": {
      "absolute": "/dio/lib/src/transformers/background_transformer.dart",
      "coverage": 80,
      "lines": {
        "12": true,
        "15": true,
        "19": true,
        "20": true,
        "24": false,
      },
      "relative": "dio/lib/src/transformers/background_transformer.dart",
    },
    "7bfe2d3a657442412d5b511988b66de6da6a6a8ffacd41fa42c0e7bc3bf9ae28": {
      "absolute": "/dio/lib/src/headers.dart",
      "coverage": 95.12,
      "lines": {
        "10": true,
        "101": true,
        "102": true,
        "106": true,
        "107": true,
        "111": false,
        "116": true,
        "117": true,
        "118": true,
        "12": true,
        "122": true,
        "124": true,
        "125": true,
        "126": true,
        "127": true,
        "130": true,
        "15": true,
        "18": true,
        "19": true,
        "33": false,
        "42": true,
        "46": true,
        "47": true,
        "54": true,
        "55": true,
        "59": true,
        "60": true,
        "62": true,
        "63": true,
        "69": true,
        "70": true,
        "72": true,
        "74": true,
        "79": true,
        "83": true,
        "84": true,
        "85": true,
        "87": true,
        "92": true,
        "93": true,
        "97": true,
      },
      "relative": "dio/lib/src/headers.dart",
    },
    "823e46b07c6e8b66665bb99d7df810346c201c2849ec57a543ebdff70865c2b0": {
      "absolute": "/dio/lib/src/redirect_record.dart",
      "coverage": 25,
      "lines": {
        "15": false,
        "17": false,
        "18": false,
        "4": true,
      },
      "relative": "dio/lib/src/redirect_record.dart",
    },
    "88b482500f062794ba23cf64c32c15eb4fdc2bf09bbe6408278db49aa2115cb0": {
      "absolute": "/dio/lib/src/form_data.dart",
      "coverage": 100,
      "lines": {
        "102": true,
        "103": true,
        "104": true,
        "105": true,
        "106": true,
        "107": true,
        "109": true,
        "110": true,
        "111": true,
        "113": true,
        "114": true,
        "115": true,
        "12": true,
        "120": true,
        "132": true,
        "134": true,
        "135": true,
        "140": true,
        "142": true,
        "143": true,
        "144": true,
        "145": true,
        "146": true,
        "147": true,
        "148": true,
        "15": true,
        "151": true,
        "152": true,
        "153": true,
        "154": true,
        "155": true,
        "156": true,
        "157": true,
        "160": true,
        "164": true,
        "165": true,
        "166": true,
        "17": true,
        "172": true,
        "174": true,
        "176": true,
        "177": true,
        "178": true,
        "18": true,
        "180": true,
        "181": true,
        "182": true,
        "183": true,
        "184": true,
        "187": true,
        "188": true,
        "189": true,
        "190": true,
        "191": true,
        "192": true,
        "194": true,
        "195": true,
        "196": true,
        "197": true,
        "200": true,
        "204": true,
        "205": true,
        "206": true,
        "211": true,
        "212": true,
        "213": true,
        "214": true,
        "215": true,
        "221": true,
        "222": true,
        "23": true,
        "27": true,
        "31": true,
        "37": true,
        "47": true,
        "52": true,
        "56": true,
        "58": true,
        "59": true,
        "60": true,
        "62": true,
        "76": true,
        "86": true,
        "89": true,
        "94": true,
        "95": true,
        "96": true,
      },
      "relative": "dio/lib/src/form_data.dart",
    },
    "9368f9a0d918c91091418412b3696df8b555783a98d70c8ef89aafefa26bee5f": {
      "absolute": "/dio/lib/src/interceptor.dart",
      "coverage": 97.58,
      "lines": {
        "106": true,
        "107": true,
        "108": true,
        "109": true,
        "111": true,
        "115": true,
        "116": true,
        "117": true,
        "118": true,
        "123": true,
        "133": true,
        "137": true,
        "138": true,
        "139": true,
        "145": true,
        "147": true,
        "15": true,
        "157": true,
        "158": true,
        "159": true,
        "160": true,
        "161": true,
        "163": true,
        "167": true,
        "168": true,
        "169": true,
        "170": true,
        "175": true,
        "179": true,
        "180": true,
        "181": true,
        "182": true,
        "183": true,
        "185": true,
        "204": true,
        "207": true,
        "211": true,
        "215": true,
        "219": true,
        "223": true,
        "227": true,
        "25": true,
        "254": true,
        "259": true,
        "26": true,
        "260": true,
        "262": true,
        "266": true,
        "271": true,
        "272": true,
        "274": true,
        "278": true,
        "28": false,
        "283": true,
        "284": true,
        "286": true,
        "296": true,
        "30": true,
        "304": true,
        "305": true,
        "308": true,
        "309": true,
        "31": true,
        "312": true,
        "313": true,
        "32": true,
        "324": true,
        "325": true,
        "327": true,
        "329": true,
        "332": true,
        "333": true,
        "335": true,
        "337": true,
        "338": false,
        "340": true,
        "346": true,
        "349": true,
        "351": true,
        "356": true,
        "357": true,
        "362": true,
        "381": true,
        "385": true,
        "388": true,
        "392": true,
        "395": true,
        "399": true,
        "402": true,
        "408": true,
        "409": true,
        "410": true,
        "411": true,
        "412": true,
        "413": true,
        "415": true,
        "418": true,
        "419": true,
        "420": true,
        "421": true,
        "423": true,
        "425": false,
        "437": true,
        "445": true,
        "446": true,
        "449": true,
        "450": true,
        "453": true,
        "454": true,
        "46": true,
        "47": true,
        "48": true,
        "49": true,
        "59": true,
        "63": true,
        "64": true,
        "65": true,
        "72": true,
        "82": true,
        "86": true,
        "87": true,
        "88": true,
        "94": true,
        "96": true,
      },
      "relative": "dio/lib/src/interceptor.dart",
    },
    "9b8e81419267c84fd0c806645e7194d39487ac94b019bbf33d687c8f344b2f0c": {
      "absolute": "/dio/lib/src/interceptors/log.dart",
      "coverage": 0,
      "lines": {
        "101": false,
        "102": false,
        "103": false,
        "106": false,
        "108": false,
        "109": false,
        "110": false,
        "111": false,
        "112": false,
        "113": false,
        "115": false,
        "118": false,
        "121": false,
        "122": false,
        "123": false,
        "124": false,
        "125": false,
        "126": false,
        "129": false,
        "130": false,
        "132": false,
        "133": false,
        "134": false,
        "136": false,
        "139": false,
        "140": false,
        "143": false,
        "144": false,
        "148": false,
        "149": false,
        "150": false,
        "152": false,
        "23": false,
        "63": false,
        "68": false,
        "69": false,
        "72": false,
        "73": false,
        "74": false,
        "75": false,
        "76": false,
        "77": false,
        "78": false,
        "79": false,
        "80": false,
        "82": false,
        "84": false,
        "86": false,
        "87": false,
        "88": false,
        "90": false,
        "91": false,
        "92": false,
        "94": false,
        "96": false,
        "99": false,
      },
      "relative": "dio/lib/src/interceptors/log.dart",
    },
    "9c973028fea3e83b8af2f6483ee2b029e47b4338835bf9c833fb101f159d7f26": {
      "absolute": "/plugins/cookie_manager/lib/src/cookie_mgr.dart",
      "coverage": 76.67,
      "lines": {
        "101": false,
        "105": true,
        "106": true,
        "107": true,
        "111": true,
        "112": true,
        "113": true,
        "114": true,
        "115": true,
        "118": true,
        "120": true,
        "124": true,
        "127": true,
        "128": true,
        "129": true,
        "130": true,
        "131": true,
        "132": true,
        "133": true,
        "134": true,
        "136": true,
        "20": true,
        "24": true,
        "26": true,
        "32": true,
        "34": true,
        "35": true,
        "37": true,
        "38": true,
        "39": true,
        "42": true,
        "45": true,
        "48": true,
        "50": true,
        "52": true,
        "53": true,
        "54": true,
        "55": true,
        "56": true,
        "57": true,
        "58": true,
        "60": true,
        "61": true,
        "62": true,
        "63": true,
        "64": false,
        "69": false,
        "73": true,
        "75": true,
        "76": false,
        "77": false,
        "78": false,
        "82": false,
        "87": false,
        "89": false,
        "90": false,
        "91": false,
        "92": false,
        "93": false,
        "97": false,
      },
      "relative": "plugins/cookie_manager/lib/src/cookie_mgr.dart",
    },
    "9e16d901ce5a97ec166c02fd6b3c66865517e5ed2d4f98896121000c4b51fad5": {
      "absolute": "/dio/lib/src/compute/compute_io.dart",
      "coverage": 0,
      "lines": {
        "101": false,
        "103": false,
        "104": false,
        "105": false,
        "111": false,
        "125": false,
        "126": false,
        "127": false,
        "128": false,
        "129": false,
        "143": false,
        "148": false,
        "150": false,
        "153": false,
        "161": false,
        "162": false,
        "170": false,
        "171": false,
        "172": false,
        "173": false,
        "29": false,
        "34": false,
        "36": false,
        "37": false,
        "38": false,
        "39": false,
        "41": false,
        "42": false,
        "43": false,
        "44": false,
        "47": false,
        "48": false,
        "49": false,
        "50": false,
        "54": false,
        "56": false,
        "59": false,
        "61": false,
        "64": false,
        "65": false,
        "69": false,
        "73": false,
        "75": false,
        "78": false,
        "81": false,
        "82": false,
        "86": false,
        "87": false,
        "90": false,
        "91": false,
        "92": false,
        "93": false,
        "94": false,
      },
      "relative": "dio/lib/src/compute/compute_io.dart",
    },
    "b04b3368f4cc8b81b57022fc72620989d0e5941136b2fa5411085468ec6a1ccf": {
      "absolute": "/plugins/http2_adapter/lib/src/http2_adapter.dart",
      "coverage": 71.72,
      "lines": {
        "101": true,
        "102": true,
        "103": true,
        "104": true,
        "105": true,
        "109": true,
        "110": true,
        "111": true,
        "113": true,
        "114": true,
        "116": true,
        "118": true,
        "120": true,
        "124": true,
        "128": false,
        "129": false,
        "134": true,
        "135": true,
        "136": true,
        "140": true,
        "141": true,
        "142": true,
        "143": true,
        "144": true,
        "145": false,
        "147": false,
        "148": false,
        "149": false,
        "158": true,
        "160": true,
        "161": true,
        "162": true,
        "167": true,
        "170": true,
        "171": true,
        "172": true,
        "173": true,
        "174": true,
        "175": true,
        "176": true,
        "179": true,
        "181": true,
        "182": true,
        "183": true,
        "185": true,
        "186": true,
        "187": true,
        "189": true,
        "191": true,
        "192": true,
        "193": true,
        "194": false,
        "197": false,
        "198": false,
        "203": false,
        "205": false,
        "206": false,
        "208": false,
        "209": false,
        "211": false,
        "213": false,
        "214": false,
        "216": true,
        "217": true,
        "218": true,
        "223": true,
        "224": true,
        "225": true,
        "227": true,
        "229": true,
        "230": true,
        "231": true,
        "232": true,
        "243": true,
        "245": false,
        "250": true,
        "252": true,
        "253": true,
        "254": true,
        "256": true,
        "260": true,
        "261": true,
        "262": true,
        "264": true,
        "266": false,
        "27": true,
        "271": true,
        "272": true,
        "274": true,
        "276": true,
        "277": true,
        "278": true,
        "279": true,
        "280": true,
        "285": true,
        "287": true,
        "288": true,
        "289": true,
        "292": true,
        "294": true,
        "296": true,
        "301": true,
        "304": false,
        "306": false,
        "31": false,
        "313": true,
        "316": true,
        "32": true,
        "321": false,
        "323": false,
        "324": false,
        "325": false,
        "326": false,
        "327": false,
        "328": false,
        "330": false,
        "331": false,
        "333": false,
        "334": false,
        "336": false,
        "337": false,
        "339": false,
        "43": true,
        "50": true,
        "52": true,
        "53": true,
        "57": true,
        "58": true,
        "60": true,
        "61": true,
        "62": true,
        "64": false,
        "65": false,
        "66": false,
        "70": false,
        "76": true,
        "78": true,
        "84": true,
        "90": true,
        "91": true,
        "92": true,
        "95": true,
        "96": false,
        "98": true,
        "99": true,
      },
      "relative": "plugins/http2_adapter/lib/src/http2_adapter.dart",
    },
    "bed0ea39c9af0b71c65fb305e8c68236e0292cad32dd6693fe8092aefcdfb6a7": {
      "absolute": "/dio/lib/src/options.dart",
      "coverage": 91.94,
      "lines": {
        "101": true,
        "102": true,
        "103": true,
        "109": true,
        "125": true,
        "128": true,
        "129": true,
        "130": false,
        "132": true,
        "138": true,
        "159": true,
        "160": true,
        "161": true,
        "165": true,
        "187": true,
        "188": true,
        "189": true,
        "190": true,
        "191": true,
        "192": true,
        "193": true,
        "194": true,
        "195": true,
        "196": true,
        "197": true,
        "198": true,
        "199": true,
        "201": true,
        "202": true,
        "203": true,
        "204": true,
        "205": true,
        "206": true,
        "207": true,
        "214": true,
        "231": true,
        "233": true,
        "237": true,
        "256": true,
        "257": true,
        "261": true,
        "263": true,
        "264": true,
        "270": true,
        "271": false,
        "274": true,
        "275": true,
        "276": true,
        "277": true,
        "280": true,
        "281": true,
        "282": true,
        "283": true,
        "285": true,
        "286": true,
        "287": true,
        "288": true,
        "289": true,
        "290": true,
        "291": true,
        "295": true,
        "305": true,
        "306": true,
        "308": true,
        "311": true,
        "312": true,
        "313": true,
        "315": true,
        "316": true,
        "318": true,
        "319": true,
        "320": true,
        "321": false,
        "323": true,
        "324": true,
        "328": true,
        "331": true,
        "332": true,
        "333": true,
        "334": true,
        "335": true,
        "336": true,
        "337": true,
        "339": true,
        "340": true,
        "341": true,
        "343": true,
        "345": true,
        "346": true,
        "347": true,
        "351": true,
        "353": true,
        "381": true,
        "384": false,
        "385": false,
        "386": false,
        "388": false,
        "403": true,
        "406": false,
        "407": false,
        "408": false,
        "410": false,
        "482": true,
        "509": true,
        "510": true,
        "511": true,
        "512": true,
        "513": true,
        "517": true,
        "545": true,
        "546": true,
        "547": true,
        "550": true,
        "554": true,
        "555": true,
        "556": true,
        "557": true,
        "558": true,
        "559": true,
        "560": true,
        "561": true,
        "562": true,
        "563": true,
        "564": true,
        "565": true,
        "566": true,
        "567": true,
        "568": true,
        "569": true,
        "570": true,
        "572": true,
        "573": true,
        "574": true,
        "575": true,
        "576": true,
        "577": true,
        "578": true,
        "579": true,
        "583": true,
        "584": true,
        "586": true,
        "600": true,
        "601": true,
        "602": true,
        "603": true,
        "604": true,
        "605": true,
        "606": true,
        "609": true,
        "610": true,
        "611": true,
        "614": true,
        "635": true,
        "636": true,
        "640": true,
        "657": true,
        "659": true,
        "664": true,
        "671": true,
        "673": true,
        "676": true,
        "677": false,
        "685": true,
        "691": true,
        "694": true,
        "695": true,
        "696": true,
        "697": true,
        "698": false,
        "704": true,
        "707": true,
        "708": true,
        "709": false,
        "711": true,
        "714": true,
        "717": true,
        "718": true,
        "719": false,
        "721": true,
        "726": true,
        "728": true,
        "729": true,
        "730": true,
        "732": true,
        "734": true,
        "98": true,
      },
      "relative": "dio/lib/src/options.dart",
    },
    "ddbf97444073e26a3250d434e7cfa9dc48025582df20fd874ccc4a64218e9310": {
      "absolute": "/dio/lib/src/multipart_file.dart",
      "coverage": 88.57,
      "lines": {
        "115": true,
        "125": true,
        "131": true,
        "138": true,
        "144": true,
        "153": true,
        "154": true,
        "155": true,
        "161": true,
        "162": true,
        "168": true,
        "169": true,
        "170": true,
        "171": true,
        "172": true,
        "173": true,
        "174": true,
        "22": false,
        "32": false,
        "33": false,
        "34": false,
        "42": true,
        "49": true,
        "50": true,
        "56": true,
        "62": true,
        "63": true,
        "64": true,
        "77": true,
        "83": true,
        "84": true,
        "85": true,
        "88": true,
        "90": true,
        "91": true,
      },
      "relative": "dio/lib/src/multipart_file.dart",
    },
    "e3a57d31614a71527998b4e2ba5982de926ac6c65fe373dafd992eda9414d82a": {
      "absolute": "/dio/lib/src/progress_stream/io_progress_stream.dart",
      "coverage": 78.95,
      "lines": {
        "11": true,
        "12": true,
        "13": true,
        "14": true,
        "17": true,
        "23": true,
        "24": true,
        "25": true,
        "26": false,
        "27": false,
        "29": false,
        "30": false,
        "32": true,
        "33": true,
        "35": true,
        "38": true,
        "39": true,
        "40": true,
        "6": true,
      },
      "relative": "dio/lib/src/progress_stream/io_progress_stream.dart",
    },
    "e669e973c3e9889b001c40186b78936ad023f8137420c627e0aee9da9fee0fd1": {
      "absolute": "/plugins/compatibility_layer/lib/src/conversion_layer_adapter.dart",
      "coverage": 69.05,
      "lines": {
        "19": true,
        "24": true,
        "30": true,
        "31": true,
        "32": true,
        "33": true,
        "34": true,
        "35": true,
        "36": true,
        "37": true,
        "38": true,
        "43": true,
        "44": true,
        "46": true,
        "52": false,
        "53": false,
        "54": false,
        "56": false,
        "57": false,
        "58": false,
        "59": false,
        "62": false,
        "63": false,
        "64": false,
        "65": false,
        "68": false,
        "69": false,
        "71": true,
        "72": true,
        "73": true,
        "75": true,
        "76": true,
        "77": true,
        "78": true,
        "82": true,
        "84": true,
        "85": true,
        "86": true,
        "87": true,
        "92": true,
        "93": true,
        "94": true,
      },
      "relative": "plugins/compatibility_layer/lib/src/conversion_layer_adapter.dart",
    },
    "f651b86290b3eb324dfe2e820609f237ae671baa95840cfbdbfb8c51581c552a": {
      "absolute": "/plugins/native_dio_adapter/lib/src/conversion_layer_adapter.dart",
      "coverage": 92.5,
      "lines": {
        "15": true,
        "19": true,
        "25": true,
        "26": true,
        "27": true,
        "30": true,
        "31": true,
        "33": true,
        "37": true,
        "38": true,
        "39": true,
        "42": true,
        "43": true,
        "44": true,
        "45": true,
        "46": true,
        "47": true,
        "53": true,
        "54": true,
        "57": true,
        "58": true,
        "59": true,
        "60": true,
        "63": true,
        "64": true,
        "65": true,
        "66": true,
        "69": true,
        "70": true,
        "77": true,
        "78": true,
        "79": false,
        "80": false,
        "81": false,
        "84": true,
        "85": true,
        "86": true,
        "87": true,
        "88": true,
        "89": true,
      },
      "relative": "plugins/native_dio_adapter/lib/src/conversion_layer_adapter.dart",
    },
    "f6ac8f3cb3e35a127a238c408bfe1e1b2759f57a9f1944ed0b6bdb9b1c3f3bd7": {
      "absolute": "/dio/lib/src/response.dart",
      "coverage": 55.56,
      "lines": {
        "13": true,
        "23": true,
        "24": true,
        "60": true,
        "61": true,
        "69": false,
        "71": false,
        "73": false,
        "75": false,
      },
      "relative": "dio/lib/src/response.dart",
    },
  },
  "timestamp": 1716079685,
}
`;
